[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-billing"
dynamic = ["version"]
description = "AI usage billing library — auto-detects OpenAI, Anthropic, Gemini responses, calculates cost, writes debit tasks to Redis"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "fakeredis[aioredis]>=2.21",
]

[tool.hatch.version]
path = "src/ai_billing/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_billing"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
